test/parser/error_recovery_semi.yl
// RUN: compiler %s  2>&1 | filecheck %s
fn error(): void {
    // CHECK: [[# @LINE + 1 ]]:9: error: expected ';' at the end of statement
    let x: number =;

    1.0;
    
    // CHECK: [[# @LINE + 1 ]]:9: error: expected ';' at the end of statement
    let z: void =;
}

// CHECK: FunctionDecl: error:void
// CHECK-NEXT:   Block
// CHECK-NEXT:     NumberLiteral: '1.0'
